--- a/css/custom.css
+++ b/css/custom.css
@@ -81,7 +81,7 @@
 
 /* Intercept texts */
 
-#welcome-page-text {
+.welcome-page-text {
   margin: 8vh;
   display: inline-block;
 }
@@ -143,13 +143,9 @@
   animation-delay: 1s !important;
 }
 
-#int-text-1 {
+#int-text-1, #int-text-1:before, #int-text-1:after {
   font-size: 2.5rem;
   animation-delay: 3s !important;
-}
-
-#int-text-1:before, #int-text-1:after {
-  animation-delay: 3s !important
 }
 
 #int-text-2 {
@@ -157,7 +153,7 @@
 }
 
 #int-text-2:before, #int-text-2:after {
-  animation-delay: 6s !important
+  animation-delay: 6s !important;
 }
 
 #int-text-3 {
@@ -165,7 +161,7 @@
 }
 
 #int-text-3:before, #int-text-3:after {
-  animation-delay: 9s !important
+  animation-delay: 9s !important;
 }
 
 #int-text-4 {
@@ -173,7 +169,7 @@
 }
 
 #int-text-4:before, #int-text-4:after {
-  animation-delay: 12s !important
+  animation-delay: 12s !important;
 }
 
 /* Intercept image selection */
@@ -413,6 +409,7 @@
   height: 100vh;
   width: 100vw;
   z-index: 100;
+  position: relative;
   /* animation: launch-content 1s ease-in 0.7s 1 forwards; ENABLED THROUGH SCRIPT */
 }
 
@@ -420,6 +417,7 @@
   height: 50vh;
   width: 50vw;
   margin: 0 !important;
+  position: absolute;
 }
 
 .content-square .content-label-top {
@@ -434,14 +432,22 @@
   margin-top: 65%;
 }
 
+.content-square-activated .content-label-bottom  {
+  margin-top: 3vh !important;
+  bottom: inherit !important;
+}
+
+
 .content-square-activated {
   z-index: 2000;
   height: 100vh;
   width: 100vw;
+  /* top: 0 !important;
+  left: 0 !important; */
 }
 
 .nohover-overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 100;
   height: 100%;
   width: 100%;
@@ -453,20 +459,33 @@
   opacity: 0;
 }
 
+.content-square-activated .nohover-overlay {
+  display: none !important;
+  opacity: 0;
+}
+
 #about-square {
   background-color: #90caf9;
+  left: 0;
+  top: 0;
 }
 
 #art-square {
   background-color: #222222;
+  right: 0;
+  bottom: 0;
 }
 
 #code-square {
   background-color: #ff9800;
+  top: 0;
+  right: 0;
 }
 
 #org-square {
   background-color: white;
+  bottom: 0;
+  left: 0;
 }
 
 #back-button-container, #close-button-container {
