--- a/css/animations.css
+++ b/css/animations.css
@@ -188,3 +188,27 @@
     clip: rect(12px, 450px, 78px, 0);
   }
 }
+
+@keyframes org-img-anim-2 {
+  0% {
+    clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+  }
+  33%, 66% {
+    clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+  }
+  100% {
+    clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+  }
+}
+
+@keyframes org-img-anim-3 {
+  0%, 33% {
+    clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+  }
+  66% {
+    clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+  }
+  100% {
+    clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+  }
+}
