Clean up css, add mobile video placeholder

--- a/css/animations.css
+++ b/css/animations.css
@@ -215,3 +215,14 @@
     clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
   }
 }
+
+
+@keyframes code-square-ground {
+
+}
+
+@keyframes code-square-panda {
+  10% {
+
+  }
+}
