--- a/css/animations.css
+++ b/css/animations.css
@@ -246,3 +246,19 @@
     transform: translateY(0);
   }
 }
+
+@keyframes org-border {
+  0% {
+    width: 0;
+    height: 0;
+  }
+
+  50% {
+    width: 100%;
+    height: 0;
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+  }
+}
