--- a/css/custom.css
+++ b/css/custom.css
@@ -21,6 +21,7 @@
  * #ffb300 amber darken-1 bananium
  * #1de9b6 teal accent-3 trisagion
  * #bbdefb blue lighten-4 launchhacks
+ * #ffecb3 amber lighten-4
  * ==================================== */
 
 /* ====================================
@@ -615,7 +616,7 @@ video {
 /* CODE SQUARE */
 
 #code-square {
-  background-color: #ff9800;
+  background-color: #ffe082;
   top: 0;
   right: 0;
 }
@@ -763,11 +764,11 @@ video {
 }
 
 #org-launchhacks {
-  border-color: #ffb300;
+  border-color: #bbdefb;
 }
 
 #org-trisagion {
-  border-color: #ffb300;
+  border-color: #1de9b6;
 }
 
 .org-button {
@@ -791,6 +792,122 @@ video {
 
 .button-2tbs {
   background-color: #283593;
+}
+
+/* ==========================
+ *  SOFTWARE PAGE
+ * ========================== */
+
+#code-content {
+  margin-top: 20vh;
+  overflow: visible;
+}
+
+.code-section {
+  position: relative;
+  overflow: visible;
+  border-radius: 0 15px 15px 15px;
+}
+
+.code-tab {
+  position: absolute;
+  border-radius: 15px 15px 0 0;
+  transform: translateY(-99%);
+  height: 5vh;
+  width: 15vw;
+  background-color: inherit;
+}
+
+.websites-section {
+  background-color: #90caf9;
+}
+
+.code-modal {
+  /* background: white; Set with class corresponding to section */
+  position: absolute;
+  width: 50vw;
+  height: 50vh;
+  top: 50vh;
+  left: 50vw;
+  margin: -25vh 0 0 -25vw;
+  transform: scale(0.1);
+  /* Hidden */
+  opacity: 0;
+  pointer-events: none;
+  z-index: 100000;
+  border-radius: 10px;
+}
+
+.code-modal-activated {
+  transform: scale(1);
+  opacity: 1;
+  pointer-events: all;
+}
+
+.code-image, .code-hover {
+  height: 100%;
+  width: 100%;
+  margin: auto;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.code-tab {
+  font-size: 2rem;
+  color: black;
+}
+
+.code-hover {
+  position: absolute;
+  display: none;
+  pointer-events: none;
+}
+
+.code-image-container {
+  position: relative;
+}
+
+.code-image:hover+.code-hover {
+  display: block;
+}
+
+/* Attach to code-square */
+
+.blur {
+  filter: blur(5px) grayscale(50%);
+  transform: scale(1.05);
+  overflow: visible;
+}
+
+.close-modal-button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 3vw;
+  cursor: pointer;
+}
+
+.close-modal-button i {
+  color: black;
+}
+
+.close-modal-button:hover i {
+  transform: scale(1.3);
+}
+
+.modal-title {
+  font-size: 3rem;
+  color: black;
+  margin-top: 2vh;
+}
+
+#code-modals {
+  pointer-events: none;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: 99999;
+  top: 0;
 }
 
 /* ==========================
