--- a/css/animations.css
+++ b/css/animations.css
@@ -232,11 +232,10 @@
   40% {
     transform: translateY(0);
   }
-
   55% {
     transform: translateY(-200%);
   }
-  70%,75% {
+  70%, 75% {
     transform: translateY(0);
   }
   90% {
@@ -252,7 +251,6 @@
     width: 0;
     height: 0;
   }
-
   50% {
     width: 100%;
     height: 0;
@@ -260,5 +258,11 @@
   100% {
     width: 100%;
     height: 100%;
+  }
+}
+
+@keyframes blur-delay {
+  to {
+    filter: blur(5px);
   }
 }
