--- a/css/custom.css
+++ b/css/custom.css
@@ -207,6 +207,11 @@
   -webkit-mask-position-y: 30vh;
   -webkit-mask-position-x: 5vh;
   animation: paint-fill 2s ease-in-out 2s 1 forwards;
+  cursor: pointer;
+}
+
+.grey-fill:hover {
+  transform: scale(1.1);
 }
 
 .grey-fill {
@@ -704,7 +709,7 @@ video {
   color: black;
   margin-top: 5vh;
   padding: 2vh;
-  width: 30vw;
+  width: 50vw;
   height: 10vh;
   position: relative;
 }
@@ -864,7 +869,6 @@ video {
   height: 100%;
   width: 100%;
   margin: auto;
-  display: inline-block;
   vertical-align: middle;
 }
 
@@ -875,16 +879,36 @@ video {
 
 .code-hover {
   position: absolute;
-  display: none;
   pointer-events: none;
+  background-color: #55555555;
+  opacity: 0;
+  top: 0;
+  left: 0;
+}
+
+.code-hover p {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
 }
 
 .code-image-container {
   position: relative;
+  cursor: pointer;
+  border-radius: 10px;
+  border: 3px solid transparent;
 }
 
-.code-image:hover+.code-hover {
-  display: block;
+.code-image-container:hover .code-hover {
+  opacity: 1;
+}
+
+.code-image-container:hover {
+  background-color: white;
+  border: 3px solid black;
 }
 
 /* Attach to code-square */
