--- a/css/custom.css
+++ b/css/custom.css
@@ -644,20 +644,27 @@ video {
 
 #code-square:hover #code-square-ground {
   animation: code-square-ground 2s linear infinite;
+  opacity: 1;
 }
 
 #code-square:hover #code-square-panda {
   animation: code-square-panda 2s ease-in-out infinite;
+  height: 30%;
+  width: 20%;
+  bottom: 3%;
 }
 
 #code-square-panda {
   background: url('../img/frame1.png') no-repeat;
-  background-size: 100%;
-  height: 30%;
-  width: 20%;
-  bottom: 3%;
+  background-size: contain;
+  background-position: center;
+  height: 70%;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  margin: auto;
   z-index: 100;
-  transition: none;
+  /* transition: none; */
   position: absolute;
 }
 
@@ -669,6 +676,8 @@ video {
   width: 128vw;
   height: 16vw;
   position: absolute;
+  transition: none;
+  opacity: 0;
 }
 
 /* ORG SQUARE */
