--- a/css/custom.css
+++ b/css/custom.css
@@ -57,7 +57,10 @@
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-a:active, a:focus, button:active, button:focus {
+a:active,
+a:focus,
+button:active,
+button:focus {
   outline: 0;
   border: none;
   -moz-outline-style: none;
@@ -140,7 +143,8 @@ a:active, a:focus, button:active, button:focus {
   position: relative;
 }
 
-.glitch::before, .glitch::after {
+.glitch::before,
+.glitch::after {
   content: attr(data-text);
   position: absolute;
   background: black;
@@ -168,12 +172,15 @@ a:active, a:focus, button:active, button:focus {
   animation: glitch-anim-2 1s 3 linear alternate-reverse;
 }
 
-.blue-glitch::before, .blue-glitch::after {
+.blue-glitch::before,
+.blue-glitch::after {
   background: #23BCFF !important;
   animation-delay: 1s !important;
 }
 
-#int-text-1, #int-text-1:before, #int-text-1:after {
+#int-text-1,
+#int-text-1:before,
+#int-text-1:after {
   font-size: 2.5rem;
   animation-delay: 3s !important;
 }
@@ -182,7 +189,8 @@ a:active, a:focus, button:active, button:focus {
   animation-delay: 6s !important;
 }
 
-#int-text-2:before, #int-text-2:after {
+#int-text-2:before,
+#int-text-2:after {
   animation-delay: 6s !important;
 }
 
@@ -190,7 +198,8 @@ a:active, a:focus, button:active, button:focus {
   animation-delay: 9s !important;
 }
 
-#int-text-3:before, #int-text-3:after {
+#int-text-3:before,
+#int-text-3:after {
   animation-delay: 9s !important;
 }
 
@@ -198,7 +207,8 @@ a:active, a:focus, button:active, button:focus {
   animation-delay: 12s !important;
 }
 
-#int-text-4:before, #int-text-4:after {
+#int-text-4:before,
+#int-text-4:after {
   animation-delay: 12s !important;
 }
 
@@ -213,7 +223,8 @@ a:active, a:focus, button:active, button:focus {
   font-size: 2rem;
 }
 
-.splash-image-pixel, .splash-image-art {
+.splash-image-pixel,
+.splash-image-art {
   height: 30vh;
   width: 30vh;
   /* background-image: url('../img/profile.png'); */
@@ -273,7 +284,8 @@ a:active, a:focus, button:active, button:focus {
   cursor: pointer;
 }
 
-.welcome-box:hover .welcome-box-label, .welcome-label-selected {
+.welcome-box:hover .welcome-box-label,
+.welcome-label-selected {
   opacity: 1 !important;
 }
 
@@ -319,9 +331,13 @@ a:active, a:focus, button:active, button:focus {
   overflow: hidden;
   z-index: -1;
   background-color: #CDED71;
+  background: url('../img/splash-gif.gif') center center / cover no-repeat;
+  filter: brightness(90%);
 }
 
-video {
+video,
+#splash-video,
+#design-video {
   position: absolute;
   top: 0;
   left: 0;
@@ -348,8 +364,9 @@ video {
 
 @media (max-width: 767px) {
   .splash-video-container {
-    background: url('../img/videoframe.png') center center / cover no-repeat;
+    background: url('../img/art/15_new.png') center center / cover no-repeat;
   }
+
   video {
     display: none;
   }
@@ -443,6 +460,7 @@ video {
     margin-left: 3vh;
     margin-right: 3vh;
   }
+
   .expand-button:hover {
     width: 24vh;
     border-radius: 8vh;
@@ -450,6 +468,7 @@ video {
     background-color: white;
     color: black;
   }
+
   .expand-button:hover i {
     color: black;
     transform: translateY(-0.5rem);
@@ -486,7 +505,8 @@ video {
   cursor: pointer;
 }
 
-#launch-button:hover, .launch-button-activated {
+#launch-button:hover,
+.launch-button-activated {
   width: 8vh !important;
   border-radius: 100%;
   box-shadow: 0px 0px 12px 1px white;
@@ -494,7 +514,8 @@ video {
   background-color: white !important;
 }
 
-#launch-button:hover i, .launch-button-activated i {
+#launch-button:hover i,
+.launch-button-activated i {
   color: black;
 }
 
@@ -517,7 +538,8 @@ video {
 
 /* BUTTONS */
 
-#back-button-container, #close-button-container {
+#back-button-container,
+#close-button-container {
   position: absolute;
   opacity: 0;
   z-index: 999;
@@ -627,6 +649,11 @@ video {
   margin-right: auto;
   padding: 0;
   z-index: -10;
+  background: url('../img/design.png') center center / cover no-repeat;
+}
+
+#art-square:hover #design-video {
+  background: url('../img/design.gif') center center / cover no-repeat;
 }
 
 @media (max-aspect-ratio: 16/9) {
@@ -716,7 +743,8 @@ video {
   animation: org-img-anim-3 1s ease-in-out infinite;
 }
 
-#org-img-3, #org-img-2 {
+#org-img-3,
+#org-img-2 {
   clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
 }
 
@@ -738,7 +766,8 @@ video {
   position: relative;
 }
 
-.org-border:before, .org-border:after {
+.org-border:before,
+.org-border:after {
   content: '';
   display: block;
   position: absolute;
@@ -922,14 +951,17 @@ video {
   pointer-events: all;
 }
 
-.code-image, .code-hover, .art-hover {
+.code-image,
+.code-hover,
+.art-hover {
   height: 100%;
   width: 100%;
   margin: auto;
   vertical-align: middle;
 }
 
-.code-hover, .art-hover {
+.code-hover,
+.art-hover {
   position: absolute;
   pointer-events: none;
   background-color: #55555555;
@@ -948,14 +980,16 @@ video {
   line-height: normal;
 }
 
-.code-image-container, .art-image-container {
+.code-image-container,
+.art-image-container {
   position: relative;
   cursor: pointer;
   border-radius: 10px;
   border: 3px solid transparent;
 }
 
-.code-image-container:hover .code-hover, .art-image-container:hover .art-hover {
+.code-image-container:hover .code-hover,
+.art-image-container:hover .art-hover {
   opacity: 1;
 }
 
