Set up css processing

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,2 @@
-
-
-/*# sourceMappingURL=custom.css.map */
+@import url(https://use.typekit.net/jps3ukf.css);
+/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNhc3MvZm9udHMuc2NzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFXUSxnREFBQSIsImZpbGUiOiJjdXN0b20uY3NzIn0= */
