--- a/css/sass/colors.scss
+++ b/css/sass/colors.scss
@@ -1,1 +1,24 @@
-$gunmetal: #293241;
+/* ===================================
+Color Palette for bencuan.me - v3_2020
+Created by Ben Cuan
+====================================== */
+
+// Main colors
+$color-bg: #293241;
+$color-footer: #272635;
+$color-highlight: #e097ff;
+$color-accent: #97f1ff;
+$color-secondary: #00b9ff;
+
+// Gradient colors
+$color-gradient1: #917ccc;
+$color-gradient2: #d789a7;
+$color-gradient3: #6993eb;
+$color-gradient4: #a64ab7;
+$color-gradient4: #2239b4;
+
+// Special colors
+$color-resume: #d40606;
+$color-linkedin: #0d5aa7;
+$color-itch: #ef8001;
+$color-email: #efc522;
