--- a/css/sass/custom.scss
+++ b/css/sass/custom.scss
@@ -1,1 +1,19 @@
+/* ===================================
+Main stylesheet for bencuan.me - v3_2020
+Created by Ben Cuan
+====================================== */
+
+
+/* ----------
+Imports
+------------- */
+@use 'mixins';
 @use 'colors';
+@use 'fonts';
+
+/* ----------
+Landing
+------------- */
+.splash-gradient {
+
+}
